k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snack101
  labels:
    name: snack101
